--- a/index.html
+++ b/index.html
@@ -29,5 +29,21 @@
             </nav>
         </div>
     </header>
+
+    <div class="jumbotron">
+        <div class="h1">
+            <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+        </div>
+        <div class="jumbo-container">
+            <div class="paragrafo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non facilis aliquam tempora necessitatibus magni iste atque sint labore! Quas eos velit vitae quibusdam quasi cupiditate hic ipsam maiores exercitationem ipsa!</p>
+                <div class="box">
+                    <a href="#">Inizia la tua prova gratuita</a>
+                </div>
+                <div id="Annulla">Annulla in qualsiasi momento</div>
+            </div>
+            <div class="img"></div>
+        </div>
+    </div>
 </body>
 </html>
