Header + Jumbotron finished

--- a/index.html
+++ b/index.html
@@ -24,25 +24,30 @@
             <nav>
                 <a href="#">Supporto</a>
                 <a href="#">Contatta l'ufficio vendite</a>
-                <a href="#">Accedi</a>
+                <a href="#" id="accedi">Accedi</a>
                 <a href="#" class="box">Inizia</a>
             </nav>
         </div>
     </header>
 
     <div class="jumbotron">
-        <div class="h1">
+        <div class="h1-container">
             <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
         </div>
         <div class="jumbo-container">
-            <div class="paragrafo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non facilis aliquam tempora necessitatibus magni iste atque sint labore! Quas eos velit vitae quibusdam quasi cupiditate hic ipsam maiores exercitationem ipsa!</p>
-                <div class="box">
-                    <a href="#">Inizia la tua prova gratuita</a>
+            <div class="text-right">
+                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business &egrave; pi&ugrave; di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                <div>
+                    <a class="box" href="#">Inizia la tua prova gratuita</a>
                 </div>
                 <div id="Annulla">Annulla in qualsiasi momento</div>
+                <div id="Freccia">
+                    <i class="fa-solid fa-arrow-down"></i>
+                </div>
             </div>
-            <div class="img"></div>
+            <div class="img">
+                <img src="img/jumbo.png" alt="">
+            </div>
         </div>
     </div>
 </body>
