--- a/index.html
+++ b/index.html
@@ -30,25 +30,66 @@
         </div>
     </header>
 
-    <div class="jumbotron">
-        <div class="h1-container">
-            <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
-        </div>
-        <div class="jumbo-container">
-            <div class="text-right">
-                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business &egrave; pi&ugrave; di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                <div>
-                    <a class="box" href="#">Inizia la tua prova gratuita</a>
+    <main>
+        <!-- JUMBOTRON -->
+        <div class="jumbotron">
+            <div class="h1-container">
+                <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+            </div>
+            <div class="jumbo-container">
+                <div class="text-right">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business &egrave; pi&ugrave; di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <div>
+                        <a class="box" href="#">Inizia la tua prova gratuita</a>
+                    </div>
+                    <div id="Annulla">Annulla in qualsiasi momento</div>
+                    <div id="Freccia">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
                 </div>
-                <div id="Annulla">Annulla in qualsiasi momento</div>
-                <div id="Freccia">
-                    <i class="fa-solid fa-arrow-down"></i>
+                <div class="img">
+                    <img src="img/jumbo.png" alt="">
                 </div>
             </div>
-            <div class="img">
-                <img src="img/jumbo.png" alt="">
+        </div>
+
+        <!-- PIANO BUSINESS -->
+        <div class="piano-business">
+            <h2>Trova il piano business che fa per te</h2>
+            <div class="checkbox">
+                <span id="mensile">
+                    <i class="fa-solid fa-circle-dot"></i>
+                    Fatturazione Mensile
+                </span>
+                <span id="annuale">
+                    <i class="fa-regular fa-circle"></i>
+                    Fatturazione Annula
+                </span>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <div class="icons">
+                        <span>
+                            <i class="fa-solid fa-user"></i>
+                            Singolo
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="icons">
+                        <i class="fa-solid fa-users"></i>
+                        Team
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="icons">
+                        <i class="fa-solid fa-building"></i>
+                        Azienda
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+   
 </body>
 </html>
