Piano business - colonne riempite

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     Fatturazione Annula
                 </span>
             </div>
-            <div class="col">
 
+            <div class="col">
                 <!-- SINGOLO -->
                 <div class="row">
                     <div class="icons">
@@ -81,43 +81,224 @@
                         <h3>Professional</h3>
                         <h4>&euro; 12.00</h4>
                         <div class="grey">/mese</div>
-                        <ul class="tipologia">
-                            <li>
-                                <i class="fa-solid fa-user"></i>
-                                1 Utente
-                            </li>
-                            <li class="separe">
-                                <i class="fa-solid fa-folder"></i>
-                                <span>5 TB di spazio di archiviazione sicuro</span>
-                                
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-diagram-project"></i>
-                                Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura
-                            </li>
-                            <li class="box">
+                        <div class="lista-offerte">
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-user"></i>
+                                    <span class="text-alignment">
+                                        1 Utente
+                                    </span> 
+                                </span>             
+                            </div>
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-folder"></i>
+                                    <span class="text-alignment">
+                                        5 TB di spazio di archiviazione sicuro
+                                    </span> 
+                                </span>
+                            </div>
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-diagram-project"></i>
+                                    <span class="text-alignment">
+                                        Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura
+                                    </span> 
+                                </span>
+                            </div>
+                        </div>
+                        <div class="try-button">
+                            <div class="box">
                                 <a href="">Provala gratis per 30 giorni</a> 
-                            </li>
-                            <li>
+                            </div>
+                            <div>
                                 oppure
                                 <a href="">acquista ora</a>
-                            </li>
-                        </ul>
-                        
+                            </div>
+                        </div>  
+                        <div class="line"></div>
+                        <h4 id="punti-salienti">Punti salienti del piano</h4>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Invia file fino a 100GB con Dropbox Transfert
+                                </span>
+                            </span>
+                        </div>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Cartelle offline su dispositivi mobili
+                                </span>
+                            </span>
+                        </div>    
                     </div>
                 </div>
 
+                <!-- TEAM -->
                 <div class="row">
                     <div class="icons">
                         <i class="fa-solid fa-users"></i>
                         Team
                     </div>
+                    <div class="column-structure-text">
+                        <h3>Advanced</h3>
+                        <h4>&euro; 18.00</h4>
+                        <div class="grey">/utente/mese</div>
+                        <div class="lista-offerte">
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-user"></i>
+                                    <span class="text-alignment">
+                                        3 o pi&ugrave; utenti
+                                    </span> 
+                                </span>             
+                            </div>
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-folder"></i>
+                                    <span class="text-alignment">
+                                        Tutto lo spazio di cui ha bisogno il tuo team
+                                    </span> 
+                                </span>
+                            </div>
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-diagram-project"></i>
+                                    <span class="text-alignment">
+                                        Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="try-button">
+                            <div class="box">
+                                <a href="">Provala gratis per 30 giorni</a> 
+                            </div>
+                            <div>
+                                oppure
+                                <a href="">acquista ora</a>
+                            </div>
+                        </div>  
+                        <div class="line"></div>
+                        <h4 id="punti-salienti">Punti salienti del piano</h4>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Nessun limite di spazio per i file
+                                </span>
+                            </span>
+                        </div>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Cartelle offline su dispositivi mobili
+                                </span>
+                            </span>
+                        </div>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Risparmio 50% rispetto alle iscrizioni singole
+                                </span>
+                            </span>
+                        </div> 
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Possibilit&agrave; di inserire nuovi membri del team
+                                </span>
+                            </span>
+                        </div> 
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Gestione dei permessi in base ai ruoli
+                                </span>
+                            </span>
+                        </div>     
+                    </div>
                 </div>
 
+
+                <!-- AZIENDA -->
                 <div class="row">
                     <div class="icons">
                         <i class="fa-solid fa-building"></i>
                         Azienda
+                    </div>
+                    <div class="column-structure-text">
+                        <h3>Enterprise</h3>
+                        <h4>Contattaci</h4>
+                        <div class="grey">-</div>
+                        <div class="lista-offerte">
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-user"></i>
+                                    <span class="text-alignment">
+                                        10 o pi&ugrave; utenti
+                                    </span> 
+                                </span>             
+                            </div>
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-folder"></i>
+                                    <span class="text-alignment">
+                                        Soluzioni personalizzabili per la tua azienda
+                                    </span> 
+                                </span>
+                            </div>
+                            <div class="separe">
+                                <span class="center">
+                                    <i class="fa-solid fa-diagram-project"></i>
+                                    <span class="text-alignment">
+                                        Sofisticate funzioni di controllo e per tenere al sicuro tutti i ifle del tuo team
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="try-button">
+                            <div class="box">
+                                <a href="">Provala gratis per 30 giorni</a> 
+                            </div>
+                            <div>
+                                oppure
+                                <a href="">acquista ora</a>
+                            </div>
+                        </div>  
+                        <div class="line"></div>
+                        <h4 id="punti-salienti">Punti salienti del piano</h4>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Cartelle offline su dispositivi mobili
+                                </span>
+                            </span>
+                        </div>
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Servizio assistenza 24h
+                                </span>
+                            </span>
+                        </div> 
+                        <div class="separe">
+                            <span class="center">
+                                <i class="color-icons fa-solid fa-check"></i>
+                                <span class="text-alignment">
+                                    Possibilit&agrave; di personalizzazione totale
+                                </span>
+                            </span>
+                        </div>    
                     </div>
                 </div>
             </div>
