--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                     Fatturazione Annula
                 </span>
             </div>
-
             <div class="col">
                 <!-- SINGOLO -->
                 <div class="row">
@@ -300,6 +299,20 @@
                             </span>
                         </div>    
                     </div>
+                </div>
+            </div>
+            <div class="enterprise">
+                <div class="icons">
+                    <i class="fa-solid fa-building"></i>
+                    Team
+                </div>
+                <h3>Enterprise</h3>
+                <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                <p>
+                    Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                </p>
+                <div class="box">
+                    <a href="#">Contatta l'ufficio vendite</a>
                 </div>
             </div>
         </div>
