--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="separe">
                                 <span class="center">
-                                    <i class="fa-solid fa-diagram-project"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
                                     <span class="text-alignment">
                                         Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura
                                     </span> 
@@ -165,7 +165,7 @@
                             </div>
                             <div class="separe">
                                 <span class="center">
-                                    <i class="fa-solid fa-diagram-project"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
                                     <span class="text-alignment">
                                         Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
                                     </span>
@@ -256,7 +256,7 @@
                             </div>
                             <div class="separe">
                                 <span class="center">
-                                    <i class="fa-solid fa-diagram-project"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
                                     <span class="text-alignment">
                                         Sofisticate funzioni di controllo e per tenere al sicuro tutti i ifle del tuo team
                                     </span>
@@ -301,6 +301,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- ENTERPRISE -->
             <div class="enterprise">
                 <div class="icons">
                     <i class="fa-solid fa-building"></i>
@@ -313,6 +315,18 @@
                 </p>
                 <div class="box">
                     <a href="#">Contatta l'ufficio vendite</a>
+                </div>
+            </div>
+            
+            <div class="info">
+                <div class="partner">
+                     <img src="img/partner.png" alt=""> 
+                </div>
+                <div id="txt-partner">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                    </p>
                 </div>
             </div>
         </div>
