--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@
                     <p>
                         Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
                     </p>
+                    <div class="box">
+                        <a href="">Trova un partner</a>  
+                    </div>
                 </div>
             </div>
         </div>
