--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
                     <a href="#">Contatta l'ufficio vendite</a>
                 </div>
             </div>
-            
+           
+            <!-- PARTNER -->
             <div class="info">
                 <div class="partner">
                      <img src="img/partner.png" alt=""> 
@@ -332,6 +333,11 @@
                     </div>
                 </div>
             </div>
+
+            <!-- DROPBOX BUSINESS -->
+            <h1>
+                Esegui pi&ugrave; operazione con Dropbox Business
+            </h1>
         </div>
     </main>
    
