--- a/index.html
+++ b/index.html
@@ -338,6 +338,52 @@
             <h1>
                 Esegui pi&ugrave; operazione con Dropbox Business
             </h1>
+            <div class="blocks">
+                <div class="square">
+                    <img src="img/business-feature-switching-tools.png" alt="">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attivit&agrave; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p >
+                </div>
+                <div class="square">
+                    <img src="img/business-feature-send-files-it.png" alt="">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attivit&agrave; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p >
+                </div>
+                <div class="square">
+                    <img src="img/business-feature-coordinate-it.png" alt="">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attivit&agrave; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p >
+                </div>
+            </div>
+            <div class="blocks">
+                <div class="square">
+                    <img src="img/business-feature-integrations-it.png" alt="">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attivit&agrave; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p >
+                </div>
+                <div class="square">
+                    <img src="img/business-feature-multi-device.png" alt="">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attivit&agrave; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p >
+                </div>
+                <div class="square">
+                    <img src="img/business-feature-security.png" alt="">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attivit&agrave; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p >
+                </div>
+            </div>
+            <div class="info-invito">
+                <h1>
+                    Pi&ugrave; di 500.000 team utilizzano
+                </h1>
+                <h1>Dropbox Business</h1>
+            </div>
+            <a id="scopri" href="">Scopri di pi&ugrave; sui nostri clienti</a>      
+        </div>
+        <div class="carosello">
+            <div class="grid1"></div>
+            <div class="agency-info"></div>
+            <div class="grid2"></div>
         </div>
     </main>
    
