--- a/index.html
+++ b/index.html
@@ -381,9 +381,43 @@
             <a id="scopri" href="">Scopri di pi&ugrave; sui nostri clienti</a>      
         </div>
         <div class="carosello">
-            <div class="grid1"></div>
+            <div class="grid1">
+                <div class="row-agency">
+                    <div class="lightgreen agency">
+                        <img class="invert" src="img/designit.svg" alt="">
+                    </div>
+                    <div class="brown agency">
+                        <img src="img/arizona_state_university.svg" alt="" class="invert">
+                    </div>
+                </div>
+                <div class="row-agency">
+                    <div class="lightblue agency">
+                        <img id="florida" src="img/university_of_florida.svg" alt="">
+                    </div>
+                    <div class="red agency">
+                        <img src="img/topps.svg" alt="" class="invert">
+                    </div>
+                </div>
+            </div>
             <div class="agency-info"></div>
-            <div class="grid2"></div>
+            <div class="grid2">
+                <div class="row-agency">
+                    <div class="red agency">
+                        <img src="img/world_bicycle_relief.svg" alt="" class="invert">
+                    </div>
+                    <div class="cadetblue agency">
+                        <img src="img/hearst_corp.svg" alt="" class="invert">
+                    </div>
+                </div>
+                <div class="row-agency">
+                    <div class="blue agency">
+                        <img src="img/lonely_planet.svg" alt="" class="invert">
+                    </div>
+                    <div class="yellow agency">
+                        <img src="img/clear_channel.svg" alt="" class="invert">
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
    
