--- a/index.html
+++ b/index.html
@@ -399,7 +399,14 @@
                     </div>
                 </div>
             </div>
-            <div class="agency-info"></div>
+            <div class="agency-info">
+                <div class="container-agency-info">
+                    <img src="img/designit.svg" alt="">
+                    <div class="line"></div>
+                    <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni compatibili con queste esigenze, ma nessuna &egrave; facile quando Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, manessuna &egrave; facile quanto  Dropbox Paper".</p>
+                    <div>Morten Thomsen, Global IT Lead</div>
+                </div>
+            </div>
             <div class="grid2">
                 <div class="row-agency">
                     <div class="red agency">
