--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
                     </p>
                     <div class="box">
-                        <a href="">Trova un partner</a>  
+                        <a id="txt-box" href="">Trova un partner</a>  
                     </div>
                 </div>
             </div>
@@ -424,6 +424,14 @@
                         <img src="img/clear_channel.svg" alt="" class="invert">
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="cadetblue extra">
+            <div class="pubblicita">
+                <h1 class="txt-brown">Porta Dropbox Business nella tua azienda.</h1>
+            </div>
+            <div id="box-prova-gratuita">
+              <a href="">Inizia la tua prova gratuita</a>
             </div>
         </div>
     </main>
