--- a/index.html
+++ b/index.html
@@ -434,7 +434,65 @@
               <a href="">Inizia la tua prova gratuita</a>
             </div>
         </div>
+        <div class="q-a">
+            <h1>Domande Frequenti</h1>
+            <div class="box-question">
+                <h4>Qual &egrave; la differenza tra Dropbox Business Standar e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="box-question">
+                <h4>Qual &egrave; la differenza tra Dropbox Business Standar e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="box-question">
+                <h4>Qual &egrave; la differenza tra Dropbox Business Standar e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="container-footer">
+            <h2>Dropbox</h2>
+            <a href="">Applicazione Desktop</a>
+            <a href="">Perch&egrave; Dropbox</a>
+            <a href="">Piani</a>
+            <a href="">Sicurezza</a>
+            <a href="">Funzioni</a>
+        </div>
+        <div class="container-footer">
+            <h2>Dropbox</h2>
+            <a href="">Applicazione Desktop</a>
+            <a href="">Perch&egrave; Dropbox</a>
+            <a href="">Piani</a>
+            <a href="">Sicurezza</a>
+            <a href="">Funzioni</a>
+        </div>
+        <div class="container-footer">
+            <h2>Dropbox</h2>
+            <a href="">Applicazione Desktop</a>
+            <a href="">Perch&egrave; Dropbox</a>
+            <a href="">Piani</a>
+            <a href="">Sicurezza</a>
+            <a href="">Funzioni</a>
+        </div>
+        <div class="container-footer">
+            <h2>Dropbox</h2>
+            <a href="">Applicazione Desktop</a>
+            <a href="">Perch&egrave; Dropbox</a>
+            <a href="">Piani</a>
+            <a href="">Sicurezza</a>
+            <a href="">Funzioni</a>
+        </div>
+        <div class="container-footer">
+            <h2>Dropbox</h2>
+            <a href="">Applicazione Desktop</a>
+            <a href="">Perch&egrave; Dropbox</a>
+            <a href="">Piani</a>
+            <a href="">Sicurezza</a>
+            <a href="">Funzioni</a>
+        </div>
+        
+    </footer>
    
 </body>
 </html>
