--- a/index.html
+++ b/index.html
@@ -451,48 +451,54 @@
         </div>
     </main>
     <footer>
-        <div class="container-footer">
-            <h2>Dropbox</h2>
-            <a href="">Applicazione Desktop</a>
-            <a href="">Perch&egrave; Dropbox</a>
-            <a href="">Piani</a>
-            <a href="">Sicurezza</a>
-            <a href="">Funzioni</a>
+        <div class="upside">
+            <div class="container-footer">
+                <h2>Dropbox</h2>
+                <a href="">Applicazione Desktop</a>
+                <a href="">Perch&egrave; Dropbox</a>
+                <a href="">Piani</a>
+                <a href="">Sicurezza</a>
+                <a href="">Funzioni</a>
+            </div>
+            <div class="container-footer">
+                <h2>Dropbox</h2>
+                <a href="">Applicazione Desktop</a>
+                <a href="">Perch&egrave; Dropbox</a>
+                <a href="">Piani</a>
+                <a href="">Sicurezza</a>
+                <a href="">Funzioni</a>
+            </div>
+            <div class="container-footer">
+                <h2>Dropbox</h2>
+                <a href="">Applicazione Desktop</a>
+                <a href="">Perch&egrave; Dropbox</a>
+                <a href="">Piani</a>
+                <a href="">Sicurezza</a>
+                <a href="">Funzioni</a>
+            </div>
+            <div class="container-footer">
+                <h2>Dropbox</h2>
+                <a href="">Applicazione Desktop</a>
+                <a href="">Perch&egrave; Dropbox</a>
+                <a href="">Piani</a>
+                <a href="">Sicurezza</a>
+                <a href="">Funzioni</a>
+            </div>
+            <div class="container-footer">
+                <h2>Dropbox</h2>
+                <a href="">Applicazione Desktop</a>
+                <a href="">Perch&egrave; Dropbox</a>
+                <a href="">Piani</a>
+                <a href="">Sicurezza</a>
+                <a href="">Funzioni</a>
+            </div>
         </div>
-        <div class="container-footer">
-            <h2>Dropbox</h2>
-            <a href="">Applicazione Desktop</a>
-            <a href="">Perch&egrave; Dropbox</a>
-            <a href="">Piani</a>
-            <a href="">Sicurezza</a>
-            <a href="">Funzioni</a>
+        <div class="line"></div>
+        <div class="lingua">
+            <i class="fa-solid fa-earth-americas"></i>
+            <span>Italian</span>
+            <i class="fa-solid fa-caret-up"></i>
         </div>
-        <div class="container-footer">
-            <h2>Dropbox</h2>
-            <a href="">Applicazione Desktop</a>
-            <a href="">Perch&egrave; Dropbox</a>
-            <a href="">Piani</a>
-            <a href="">Sicurezza</a>
-            <a href="">Funzioni</a>
-        </div>
-        <div class="container-footer">
-            <h2>Dropbox</h2>
-            <a href="">Applicazione Desktop</a>
-            <a href="">Perch&egrave; Dropbox</a>
-            <a href="">Piani</a>
-            <a href="">Sicurezza</a>
-            <a href="">Funzioni</a>
-        </div>
-        <div class="container-footer">
-            <h2>Dropbox</h2>
-            <a href="">Applicazione Desktop</a>
-            <a href="">Perch&egrave; Dropbox</a>
-            <a href="">Piani</a>
-            <a href="">Sicurezza</a>
-            <a href="">Funzioni</a>
-        </div>
-        
-    </footer>
-   
+    </footer> 
 </body>
 </html>
