Team enterprise adjustment

--- a/index.html
+++ b/index.html
@@ -308,13 +308,17 @@
                     <i class="fa-solid fa-building"></i>
                     Team
                 </div>
-                <h3>Enterprise</h3>
-                <h4>Contatta l'ufficio vendite per i prezzi</h4>
-                <p>
-                    Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
-                </p>
-                <div class="box">
-                    <a href="#">Contatta l'ufficio vendite</a>
+                <div class="enterprise-alignment">
+                    <div class="enterprise-txt">
+                        <h3>Enterprise</h3>
+                        <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                        <p>
+                            Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <a href="#">Contatta l'ufficio vendite</a>
+                    </div>
                 </div>
             </div>
            
