hover on buttons

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#">Perch&egrave; Dropbox</a>
-                <a href="#">Funzioni</a>
-                <a href="#">Piani e Prezzi</a>
+                <a class="border-h" href="#">Perch&egrave; Dropbox</a>
+                <a class="border-h" href="#">Funzioni</a>
+                <a class="border-h" href="#">Piani e Prezzi</a>
             </nav>
             <nav>
-                <a href="#">Supporto</a>
-                <a href="#">Contatta l'ufficio vendite</a>
-                <a href="#" id="accedi">Accedi</a>
-                <a href="#" class="box">Inizia</a>
+                <a class="border-h" href="#">Supporto</a>
+                <a class="border-h" href="#">Contatta l'ufficio vendite</a>
+                <a class="border-h" href="#" id="accedi">Accedi</a>
+                <a id="Inizia" href="#" class="box">Inizia</a>
             </nav>
         </div>
     </header>
