Aggiustamenti - colori, jumbotron

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
             <div class="grid2">
                 <div class="row-agency">
-                    <div class="red agency">
+                    <div class="red-dark agency">
                         <img src="img/world_bicycle_relief.svg" alt="" class="invert">
                     </div>
                     <div class="cadetblue agency">
@@ -466,7 +466,7 @@
                 <a href="">Funzioni</a>
             </div>
             <div class="container-footer">
-                <h2>Dropbox</h2>
+                <h2>Prodotti</h2>
                 <a href="">Applicazione Desktop</a>
                 <a href="">Perch&egrave; Dropbox</a>
                 <a href="">Piani</a>
@@ -474,7 +474,7 @@
                 <a href="">Funzioni</a>
             </div>
             <div class="container-footer">
-                <h2>Dropbox</h2>
+                <h2>Azienda</h2>
                 <a href="">Applicazione Desktop</a>
                 <a href="">Perch&egrave; Dropbox</a>
                 <a href="">Piani</a>
@@ -482,7 +482,7 @@
                 <a href="">Funzioni</a>
             </div>
             <div class="container-footer">
-                <h2>Dropbox</h2>
+                <h2>Supporto</h2>
                 <a href="">Applicazione Desktop</a>
                 <a href="">Perch&egrave; Dropbox</a>
                 <a href="">Piani</a>
@@ -490,7 +490,7 @@
                 <a href="">Funzioni</a>
             </div>
             <div class="container-footer">
-                <h2>Dropbox</h2>
+                <h2>Community</h2>
                 <a href="">Applicazione Desktop</a>
                 <a href="">Perch&egrave; Dropbox</a>
                 <a href="">Piani</a>
@@ -498,7 +498,7 @@
                 <a href="">Funzioni</a>
             </div>
         </div>
-        <div class="line"></div>
+        <div id="line-footer" class="line"></div>
         <div class="lingua">
             <i class="fa-solid fa-earth-americas"></i>
             <span>Italian</span>
